# capstone_android

./: .gitignore  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/aiguideapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  yolov8.cpp
app/src/main/cpp/include/ncnn/: platform.h
app/src/main/java/com/example/aiguideapp/: MainActivity.kt
app/src/main/java/com/example/aiguideapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/aiguideapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
